--- a/client/index.html
+++ b/client/index.html
@@ -2,13 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="icon.png" />
+    <link rel="icon" type="image/png" href="chat.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link
-    href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
-    rel="stylesheet"
-  /> -->
-    <title>ChattApp</title>
+    <title>Talkapp</title>
   </head>
   <body>
     <div id="root"></div>
