--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="chat.png" />
+    <link rel="icon" type="image/png" href="icons8-chat-64.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title id="tab-title">Talkapp</title>
   </head>
